@@ -4,7 +4,7 @@
 ; This file contains all possible variables, excluding the opsi-system
 ; variables, for the opsi-winst scripts in use.
 ;
-; J. Boettge <boettge@mpi-halle.mpg.de>  2019-07-02 07:28:48 +0200
+; J. Boettge <boettge@mpi-halle.mpg.de>  2019-07-05 11:01:09 +0200
 ;=====================================================================
 DefStringList $LanguageMap$
 DefStringList $MAP$
@@ -63,6 +63,7 @@ DefVar $RegSearchOpts$
 DefVar $result$
 DefVar $SearchPattern$
 DefVar $SEVENZIP$
+DefVar $Stage$
 DefVar $StrippedProductId$
 DefVar $sw_arch$
 DefVar $sw_lang$
